--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon"
+    "start": "npx nodemon",
+    "dev" : "npx ts-node --files ./src/app.ts"
   },
   "keywords": [],
   "author": "",
